coorected about us ,navbar

--- a/about_us.html
+++ b/about_us.html
@@ -13,64 +13,6 @@
             box-sizing: border-box;
             font-family: "Poppins", sans-serif;
         }
-        
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 20px;
-            background: #333;
-            color: white;
-            position: fixed;
-            top: 0;
-            width: 100%;
-            z-index: 1000;
-        }
-
-        .logo {
-            display: flex;
-            align-items: center;
-            font-size: 22px;
-            font-weight: bold;
-        }
-
-        .logo img {
-            height: 40px;
-            width: auto;
-            margin-right: 10px;
-        }
-
-        .nav-links {
-            list-style: none;
-            display: flex;
-            gap: 20px;
-        }
-
-        .nav-links a {
-            color: white;
-            text-decoration: none;
-            font-size: 16px;
-            transition: 0.3s;
-        }
-
-        .nav-links a:hover {
-            text-decoration: underline;
-            color: #ffcc00;
-        }
-
-        .auth-buttons {
-            display: flex;
-            gap: 10px;
-        }
-
-        .signup-btn {
-            background: #ffcc00;
-            color: #333;
-            padding: 8px 12px;
-            border-radius: 5px;
-            text-decoration: none;
-            font-weight: bold;
-        }
 
         .content {
             padding: 100px 20px 40px;
@@ -79,13 +21,33 @@
         }
 
         .about-container {
-            max-width: 800px;
+            max-width: 900px;
             margin: auto;
             background: white;
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
         }
+
+        .section {
+    display: flex;
+    align-items: center;
+    gap: 40px; /* Increased gap for more space */
+    margin-bottom: 50px; /* More bottom margin for separation */
+}
+
+.section img {
+    width: 45%;
+    max-height: 220px; /* Slightly larger for better proportion */
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.section .text {
+    width: 55%;
+    text-align: left;
+    padding: 10px; /* Added padding for spacing */
+}
 
         .services-list {
             list-style: none;
@@ -105,46 +67,78 @@
         .services-list li:hover {
             background: #e0e0e0;
         }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .section {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .section img,
+            .section .text {
+                width: 100%;
+            }
+        }
     </style>
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-            <div class="logo">
-                <img src="im2.png" alt="ShopWise Logo">
-                <span>ShopWise</span>
-            </div>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="marketplace.html">Marketplace</a></li>
-                <li><a href="about_us.html">About</a></li>
-                <li><a href="how_it_work.html">How It Works</a></li>
-                <li class="auth-buttons">
-                    <a href="sign_up.html" class="signup-btn">Sign Up</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <!-- Navbar will be loaded dynamically -->
+    <header id="navbar-container"></header>
 
     <section id="about" class="content">
         <div class="about-container">
             <h2 style="color: #007bff; margin-bottom: 20px;">About Us</h2>
-            <p style="color: #555; line-height: 1.6;">
-                The <strong>ShopWise Program</strong> aims to improve retail in Africa by offering smart solutions to make stores more efficient, enhance customer experiences, and help local shops manage inventory more effectively.
-            </p>
-            
-            <h3 style="margin-top: 30px; color: #007bff;">Our Services</h3>
-            <ul class="services-list">
-                <li><strong>Inventory Management:</strong> Real-time tracking to reduce waste and optimize ordering.</li>
-                <li><strong>Customer Analytics:</strong> Tools to analyze shopping habits and enable personalized marketing.</li>
-                <li><strong>Mobile Payments:</strong> Fast and secure payment options for seamless transactions.</li>
-            </ul>
 
-            <h3 style="margin-top: 30px; color: #333;">Our Vision</h3>
-            <p style="color: #555; line-height: 1.6;">
-                The ShopWise Program aims to modernize and digitize Africa’s retail industry by integrating smart solutions to enhance customer satisfaction and contribute to Africa’s economic growth.
-            </p>
+            <div class="section">
+                <img src="products/aboutus.jpg" alt="About ShopWise">
+                <div class="text">
+                    <p style="color: #555; line-height: 1.6;">
+                        The <strong>ShopWise Program</strong> aims to improve retail in Africa by offering smart solutions to make stores more efficient, enhance customer experiences, and help local shops manage inventory more effectively.
+                    </p>
+                </div>
+            </div>
+
+            <h3 style="color: #007bff;">Our Services</h3>
+
+            <div class="section">
+                <img src="products/ourservice.jpeg" alt="Services">
+                <div class="text">
+                    <ul class="services-list">
+                        <li><strong>Inventory Management:</strong> Real-time tracking to reduce waste and optimize ordering.</li>
+                        <li><strong>Customer Analytics:</strong> Tools to analyze shopping habits and enable personalized marketing.</li>
+                        <li><strong>Mobile Payments:</strong> Fast and secure payment options for seamless transactions.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <h3 style="color: #333;">Our Vision</h3>
+
+            <div class="section">
+                <img src="products/ourvision.jpeg" alt="Vision">
+                <div class="text">
+                    <p style="color: #555; line-height: 1.6;">
+                        The ShopWise Program aims to modernize and digitize Africa’s retail industry by integrating smart solutions to enhance customer satisfaction and contribute to Africa’s economic growth.
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
+
+    <script>
+        // Load Navbar dynamically
+        fetch("nav.html")
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById("navbar-container").innerHTML = data;
+            });
+
+        // Toggle menu for mobile
+        document.addEventListener("DOMContentLoaded", function () {
+            document.getElementById('menuToggle').addEventListener('click', function () {
+                document.getElementById('navLinks').classList.toggle('active');
+            });
+        });
+    </script>
 </body>
 </html>
