--- a/buyer_dashboard.html
+++ b/buyer_dashboard.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buyer Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
     <style>
         * {
             margin: 0;
@@ -58,45 +57,51 @@
             padding: 20px;
             background: #f4f4f4;
         }
-        .dashboard-summary {
-            display: flex;
-            gap: 20px;
-            flex-wrap: wrap;
-        }
-        .summary-card {
-            background: white;
-            padding: 20px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            flex: 1;
-            min-width: 250px;
-        }
-        .summary-card i {
-            font-size: 2rem;
-            color: #007bff;
-        }
-        .orders-table, .wishlist-section {
+        .products-section {
             background: white;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
             margin-top: 20px;
         }
-        table {
+        .products-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .product-card {
+            background: white;
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+        .product-card img {
             width: 100%;
-            border-collapse: collapse;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 5px;
         }
-        th, td {
-            padding: 10px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
+        .product-card h3 {
+            font-size: 1rem;
+            margin: 10px 0;
         }
-        th {
+        .product-card p {
+            color: #007bff;
+            font-weight: bold;
+        }
+        .product-card button {
             background: #007bff;
             color: white;
+            border: none;
+            padding: 8px 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+        .product-card button:hover {
+            background: #0056b3;
         }
     </style>
 </head>
@@ -116,61 +121,36 @@
         </aside>
         <main class="main-content">
             <header>
-                <h1>Welcome, Buyer</h1>
+                <h1>Available Products</h1>
             </header>
-            <section class="dashboard-summary">
-                <div class="summary-card">
-                    <i class="fa fa-shopping-cart"></i>
-                    <div>
-                        <h3>5</h3>
-                        <p>Active Orders</p>
+
+            <section class="products-section">
+                <div class="products-grid">
+                    <div class="product-card">
+                        <img src="products/smartphone.jpg" alt="Smartphone">
+                        <h3>Smartphone</h3>
+                        <p>$499</p>
+                        <button>Add to Cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="products/headphones.jpg" alt="Headphones">
+                        <h3>Wireless Headphones</h3>
+                        <p>$79</p>
+                        <button>Add to Cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="products/laptop.jpg" alt="Laptop">
+                        <h3>Gaming Laptop</h3>
+                        <p>$1299</p>
+                        <button>Add to Cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="products/smartwatch.jpg" alt="Smartwatch">
+                        <h3>Smartwatch</h3>
+                        <p>$199</p>
+                        <button>Add to Cart</button>
                     </div>
                 </div>
-                <div class="summary-card">
-                    <i class="fa fa-heart"></i>
-                    <div>
-                        <h3>12</h3>
-                        <p>Wishlist Items</p>
-                    </div>
-                </div>
-                <div class="summary-card">
-                    <i class="fa fa-envelope"></i>
-                    <div>
-                        <h3>3</h3>
-                        <p>New Messages</p>
-                    </div>
-                </div>
-            </section>
-            <section class="orders-table">
-                <h2>Recent Orders</h2>
-                <table>
-                    <tr>
-                        <th>Order ID</th>
-                        <th>Product</th>
-                        <th>Status</th>
-                        <th>Expected Delivery</th>
-                    </tr>
-                    <tr>
-                        <td>#2023</td>
-                        <td>Smartphone</td>
-                        <td>Shipped</td>
-                        <td>Feb 25</td>
-                    </tr>
-                    <tr>
-                        <td>#2024</td>
-                        <td>Headphones</td>
-                        <td>Processing</td>
-                        <td>Feb 28</td>
-                    </tr>
-                </table>
-            </section>
-            <section class="wishlist-section">
-                <h2>Wishlist</h2>
-                <ul>
-                    <li>Wireless Earbuds</li>
-                    <li>Laptop Stand</li>
-                    <li>Gaming Mouse</li>
-                </ul>
             </section>
         </main>
     </div>
